// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateSelect snapshots > matches snapshot: ControlledExternally 1`] = `
<div>
  <div
    class="date-select-container"
  >
    <div
      class="date-select"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_1t_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Day
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_1t_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_20_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Month
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_20_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_23_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Year
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_23_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateSelect snapshots > matches snapshot: CustomYearRange 1`] = `
<div>
  <div
    class="date-select-container"
  >
    <div
      class="date-select"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_l_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Day
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_l_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_o_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Month
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_o_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_r_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Year
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_r_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateSelect snapshots > matches snapshot: Default 1`] = `
<div>
  <div
    class="date-select-container"
  >
    <div
      class="date-select"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_1_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Day
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_1_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_4_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Month
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_4_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_7_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Year
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_7_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`DateSelect snapshots > matches snapshot: Disabled 1`] = `
<div>
  <div
    class="date-select-container"
  >
    <div
      class="date-select"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-disabled=""
        disabled=""
        id="base-ui-_r_v_"
        role="combobox"
        tabindex="-1"
        type="button"
      >
        <span>
          15
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        disabled=""
        id="base-ui-_r_v_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value="15"
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-disabled=""
        disabled=""
        id="base-ui-_r_12_"
        role="combobox"
        tabindex="-1"
        type="button"
      >
        <span>
          June
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        disabled=""
        id="base-ui-_r_12_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value="06"
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-disabled=""
        disabled=""
        id="base-ui-_r_15_"
        role="combobox"
        tabindex="-1"
        type="button"
      >
        <span>
          1990
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        disabled=""
        id="base-ui-_r_15_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value="1990"
      />
    </div>
  </div>
</div>
`;

exports[`DateSelect snapshots > matches snapshot: ErrorMessageOnly 1`] = `
<div>
  <div
    class="date-select-container"
  >
    <div
      class="date-select"
    >
      <button
        aria-describedby="_r_1i_-error"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="true"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_1j_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Day
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_1j_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-describedby="_r_1i_-error"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="true"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_1m_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Month
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_1m_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-describedby="_r_1i_-error"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="true"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_1p_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Year
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_1p_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
    </div>
    <p
      class="date-select-error"
      id="_r_1i_-error"
      role="alert"
    >
      Enter your full date of birth.
    </p>
  </div>
</div>
`;

exports[`DateSelect snapshots > matches snapshot: ErrorState 1`] = `
<div>
  <div
    class="date-select-container"
  >
    <div
      class="date-select"
    >
      <button
        aria-describedby="_r_18_-error"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="true"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_19_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Day
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_19_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-describedby="_r_18_-error"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="true"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_1c_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Month
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_1c_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
      <button
        aria-describedby="_r_18_-error"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-invalid="true"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        data-placeholder=""
        id="base-ui-_r_1f_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span
          data-placeholder=""
        >
          Year
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_1f_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value=""
      />
    </div>
    <p
      class="date-select-error"
      id="_r_18_-error"
      role="alert"
    >
      Enter your full date of birth.
    </p>
  </div>
</div>
`;

exports[`DateSelect snapshots > matches snapshot: WithValue 1`] = `
<div>
  <div
    class="date-select-container"
  >
    <div
      class="date-select"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        id="base-ui-_r_b_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span>
          15
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_b_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value="15"
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        id="base-ui-_r_e_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span>
          June
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_e_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value="06"
      />
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        class="flex h-9 w-full items-center justify-between gap-2 rounded-md border border-input bg-background px-3 py-2 text-sm shadow-sm outline-none transition-colors data-[placeholder]:text-muted-foreground focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[popup-open]:ring-2 data-[popup-open]:ring-ring aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive aria-invalid:focus-visible:ring-destructive date-select__trigger"
        id="base-ui-_r_h_"
        role="combobox"
        tabindex="0"
        type="button"
      >
        <span>
          1990
        </span>
        <span
          aria-hidden="true"
          class="flex shrink-0 items-center text-muted-foreground"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </span>
      </button>
      <input
        aria-hidden="true"
        id="base-ui-_r_h_-hidden-input"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        value="1990"
      />
    </div>
  </div>
</div>
`;
